# ChangeLog for media-libs/libhydrogen
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libhydrogen/ChangeLog,v 1.10 2004/08/07 23:21:41 slarti Exp $

  08 Aug 2004; Tom Martin <slarti@gentoo.org> libhydrogen-0.8.0.ebuild,
  libhydrogen-0.8.1_beta5.ebuild:
  Typo in DESCRIPTION: Libary -> Library. Bug 59717.

  19 Jun 2004; David Holm <dholm@gentoo.org> libhydrogen-0.8.1_beta5.ebuild:
  Added to ~ppc.

  13 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org>
  libhydrogen-0.8.0.ebuild, libhydrogen-0.8.1_beta5.ebuild:
  Getting rid of virtual/jack.

  25 Apr 2004; Aron Griffis <agriffis@gentoo.org> libhydrogen-0.8.0.ebuild,
  libhydrogen-0.8.1_beta5.ebuild:
  Add die following econf for bug 48950

*libhydrogen-0.8.1_beta5 (10 Dec 2003)

  10 Dec 2003; <torbenh@gentoo.org> libhydrogen-0.8.0.ebuild,
  libhydrogen-0.8.1_beta5.ebuild:
  At last a new Version. Although beta it should be really stable
  libhydrogen-0.8.0 fixed for jack >= 0.80.0

  12 Jun 2003; <msterret@gentoo.org> libhydrogen-0.8.0.ebuild:
  fix Header

*libhydrogen-0.8.0 (25 May 2003)

  25 May 2003; jje <jje@gentoo.org> libhydrogen-0.7.4.ebuild,
  libhydrogen-0.7.4.ebuild, libhydrogen-0.7.6.ebuild,
  libhydrogen-0.7.6.ebuild, libhydrogen-0.8.0.ebuild:
  Removing old versions.

*libhydrogen-0.8.0 (25 May 2003)

  25 May 2003; jje <jje@gentoo.org> libhydrogen-0.7.4.ebuild,
  libhydrogen-0.7.4.ebuild, libhydrogen-0.8.0.ebuild:
  Version bump. Needed libtoolizing.

*libhydrogen-0.7.6 (12 Apr 2003)

  12 Apr 2003; jje Manifest, libhydrogen-0.7.6.ebuild:
  Version bump.

  Submitted by: Marc Hildebrand

*libhydrogen-0.7.4 (09 Mar 2003)

  09 Mar 2003; jje <jje@gentoo.org> libhydrogen-0.7.4.ebuild:
  Initial revision.
  
  Submitted by: Marc Hildebrand
