@@ -1,12 +1,12 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libhydrogen/libhydrogen-0.8.0.ebuild,v 1.13 2004/08/07 23:21:41 slarti Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libhydrogen/libhydrogen-0.8.0.ebuild,v 1.14 2004/08/25 02:26:29 swegener Exp $
 
 inherit libtool
 
 DESCRIPTION="Linux Drum Machine - Library"
 HOMEPAGE="http://hydrogen.sourceforge.net"
-SRC_URI="http://unc.dl.sourceforge.net/sourceforge/hydrogen/${P}.tar.gz"
+SRC_URI="mirror://sourceforge/hydrogen/${P}.tar.gz"
 
 SLOT="0"
 LICENSE="GPL-2"
