@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/resid/resid-0.13-r1.ebuild,v 1.9 2004/07/14 20:25:31 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/resid/resid-0.13-r1.ebuild,v 1.10 2004/08/25 02:24:46 swegener Exp $
 
 DESCRIPTION="C++ library to emulate the C64 SID chip"
 HOMEPAGE="http://sidplay2.sourceforge.net"
@@ -8,7 +8,7 @@ SRC_URI="mirror://sourceforge/sidplay2/${P}-p1.tgz"
 LICENSE="GPL-2"
 SLOT="0"
 IUSE=""
-KEYWORDS="x86 sparc "
+KEYWORDS="x86 sparc"
 DEPEND="virtual/libc"
 
 src_compile() {
