@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/openvrml
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/openvrml/ChangeLog,v 1.12 2004/08/02 08:49:55 lanius Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/openvrml/ChangeLog,v 1.13 2004/08/25 02:29:01 swegener Exp $
+
+  25 Aug 2004; Sven Wegener <swegener@gentoo.org> openvrml-0.11.2.ebuild,
+  openvrml-0.14.3.ebuild:
+  Changed SRC_URI to use mirror:// syntax.
 
   02 Aug 2004; Heinrich Wendel <lanius@gentoo.org> openvrml-0.14.3.ebuild:
   replace text useflag by truetype
