@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/resid
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/resid/ChangeLog,v 1.8 2004/07/01 08:03:31 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/resid/ChangeLog,v 1.9 2004/08/25 02:24:46 swegener Exp $
+
+  25 Aug 2004; Sven Wegener <swegener@gentoo.org> resid-0.13-r1.ebuild,
+  resid-0.13.ebuild:
+  Changed SRC_URI to use mirror:// syntax.
 
   01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> resid-0.13-r1.ebuild:
   virtual/glibc -> virtual/libc
